Issue #41: add violation comment violation